--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,8 @@ jobs:
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy over SSH
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          GOOGLE_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          CODE: ${{ secrets.CODE }}
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} <<EOF
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
             set -e
             cd ~/NextChat
             git pull origin main
@@ -34,10 +30,10 @@ jobs:
             docker rm nextchat || true
             docker build --no-cache -t nextchat-custom .
             docker run -d --name nextchat \
-              -e OPENAI_API_KEY=$OPENAI_API_KEY \
-              -e GOOGLE_API_KEY=$GOOGLE_API_KEY \
-              -e CODE=$CODE \
+              -e OPENAI_API_KEY='${{ secrets.OPENAI_API_KEY }}' \
+              -e GOOGLE_API_KEY='${{ secrets.GEMINI_API_KEY }}' \
+              -e CODE='${{ secrets.CODE }}' \
               -p 3000:3000 \
               nextchat-custom
             sudo systemctl restart nginx
-          EOF
+          "
