revise  deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,20 +20,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Deploy over SSH
+      - name: Run Deploy Script on GCP
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "
-            set -e
-            cd ~/NextChat
-            git pull origin main
-            docker stop nextchat || true
-            docker rm nextchat || true
-            docker build --no-cache -t nextchat-custom .
-            docker run -d --name nextchat \
-              -e OPENAI_API_KEY='${{ secrets.OPENAI_API_KEY }}' \
-              -e GOOGLE_API_KEY='${{ secrets.GEMINI_API_KEY }}' \
-              -e CODE='${{ secrets.CODE }}' \
-              -p 3000:3000 \
-              nextchat-custom
-            sudo systemctl restart nginx
-          "
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} \
+          "~/deploy-nextchat.sh '${{ secrets.OPENAI_API_KEY }}' '${{ secrets.GEMINI_API_KEY }}' '${{ secrets.CODE }}'"
