--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
     "zod": "^3.24.1",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "next-auth": "^4.24.6",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@tauri-apps/api": "^2.1.1",
